change app file name, update to README
change the app file name to something other than index.html so that README.md can be displayed as index.html. Minor change to the contents of README.md.

--- a/visualizer.html
+++ b/visualizer.html
@@ -86,6 +86,7 @@ h2{
 <canvas></canvas>
 <h1>Statistic Region of Utility visualized</h1>
 <div id="inputs">
+<p><a href="index.html">README</a></p>
 <p>
 Touch lines to highlight the variables they are based on.</p>
 <h2>Editable variables</h2>
@@ -107,7 +108,7 @@ Touch lines to highlight the variables they are based on.</p>
 <div id="dNPV_min" onmouseover="HighlightLabelnInput(['LR_neg_max', 'OR_post_neg'])" onmouseout="unHighlightLabelnInput(['LR_neg_max', 'OR_post_neg'])">
 <label for="NPV_min">minimal acceptable NPV:</label>
 <input type="text" id="NPV_min" value="0.65"/>
-<input type="checkbox" id="showhide_FNvTN" value="1" />impose limit
+<input type="checkbox" id="showhide_FNvTN" value="1" checked />impose limit
 </div>
 <br/>
 <div style="height:100px; width: 340px">
