change app file name, update to README
change the app file name to something other than index.html so that README.md can be displayed as index.html. Minor change to the contents of README.md.

--- a/visualizer.html
+++ b/visualizer.html
@@ -87,8 +87,7 @@ h2{
 <h1>Statistic Region of Utility visualized</h1>
 <div id="inputs">
 <p><a href="index.html">README</a></p>
-<p>
-Touch lines to highlight the variables they are based on.</p>
+<p>Touch lines to highlight the variables they are based on.</p>
 <h2>Editable variables</h2>
 <p>Touch to highlight derived variable(s) affected by it.</p>
 <div id="dPrev" onmouseover="HighlightLabelnInput(['OR_pre', 'LR_pos_min', 'LR_neg_max'])" onmouseout="unHighlightLabelnInput(['OR_pre', 'LR_pos_min', 'LR_neg_max'])">
